[package]
description = "Susy IPFS-compatible API"
name = "susy-ipfs-api"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]

[dependencies]
sofcore = { path = "../sofcore" }
susy-bytes = {version="0.1",registry="susytech"}
sophon-types = {version="0.4",registry="susytech"}
susy-jsonrpc-core = {version="10.0.1",registry="susytech"}
susy-jsonrpc-http-server = {version="10.0.1",registry="susytech"}
srlp = { version = "0.3.0", registry="susytech", features = ["sophon"] }
cid = {version="0.3",registry="susytech"}
multihash = {version="0.8",registry="susytech"}
unicase = {version="2.0",registry="susytech"}

[dev-dependencies]
sofcore = { path = "../sofcore", features = ["test-helpers"] }
