[package]
name = "sofjson"
version = "0.1.0"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]

[dependencies]
sophon-types = {version="0.4",registry="susytech"}
rustc-hex = {version = "1.0",registry="susytech"}
serde = {version = "1.0",registry="susytech"}
serde_json = {version = "1.0",registry="susytech"}
serde_derive = {version = "1.0",registry="susytech"}

