[package]
name = "sofash"
version = "1.12.0"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]

[dependencies]
crunchy = {version="0.1.0",registry="susytech"}
either = {version="1.0.0",registry="susytech"}
sophon-types = {version="0.4",registry="susytech"}
keccak-hash = {version="0.1",registry="susytech"}
log = {version="0.4",registry="susytech"}
memmap = {version="0.6",registry="susytech"}
parking_lot = {version = "0.7",registry="susytech"}
primal = {version="0.2.3",registry="susytech"}

[dev-dependencies]
criterion = {version="0.2",registry="susytech"}
rustc-hex = {version = "1.0",registry="susytech"}
serde_json = {version = "1.0",registry="susytech"}
tempdir = {version="0.3",registry="susytech"}

[features]
default = []
bench = []

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "progpow"
harness = false
