[package]
description = "Sofcore library"
homepage = "http://superstring.io"
license = "GPL-3.0"
name = "sofcore"
version = "1.12.0"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]

[dependencies]
ansi_term = {version = "0.10",registry="susytech"}
blooms-db = { path = "../util/blooms-db", optional = true }
bn = { git = "https://octonion.institute/susytech/bn", default-features = false }
byteorder = {version="1.0", registry="susytech"}
common-types = { path = "types" }
crossbeam = {version="0.4",registry="susytech"}
env_logger = { version = "0.5", registry="susytech", optional = true }
error-chain = { version = "0.12", registry="susytech", default-features = false }
sofabi = {version="6.0",registry="susytech"}
sofabi-contract = {version="6.0",registry="susytech"}
sofabi-derive = {version="6.0",registry="susytech"}
sofash = { path = "../sofash" }
sofcore-blockchain = { path = "./blockchain" }
sofcore-bloom-journal = { path = "../util/bloom" }
sofcore-call-contract = { path = "./call-contract" }
sofcore-db = { path = "./db" }
sofcore-io = { path = "../util/io" }
sofcore-miner = { path = "../miner" }
sofcore-stratum = { path = "../miner/stratum", optional = true }
sophon-types = {version="0.4",registry="susytech"}
sofjson = { path = "../json" }
sofkey = { path = "../accounts/sofkey" }
svm = { path = "svm" }
hash-db = {version="0.11.0",registry="susytech"}
heapsize = {version="0.4",registry="susytech"}
itertools = {version="0.5",registry="susytech"}
journaldb = { path = "../util/journaldb" }
keccak-hash = {version="0.1",registry="susytech"}
keccak-hasher = { path = "../util/keccak-hasher" }
susykv = {version="0.1",registry="susytech"}
susykv-memorydb = {version="0.1",registry="susytech"}
susykv-rocksdb = { version = "0.1.3", registry="susytech", optional = true }
lazy_static = {version="1.0",registry="susytech"}
len-caching-lock = { path = "../util/len-caching-lock" }
log = {version="0.4",registry="susytech"}
lru-cache = {version="0.1",registry="susytech"}
macros = { path = "../util/macros" }
memory-cache = { path = "../util/memory-cache" }
memory-db = {version="0.11.0",registry="susytech"}
num = { version = "0.1", registry="susytech", default-features = false, features = ["bigint"] }
num_cpus = {version = "1.2",registry="susytech"}
susy-bytes = {version="0.1",registry="susytech"}
susy-crypto = {version="0.3.0",registry="susytech"}
susy-machine = { path = "../machine" }
susy-snappy = {version="0.1",registry="susytech"}
parking_lot = {version = "0.7",registry="susytech"}
trie-db = {version="0.11.0",registry="susytech"}
susy-patricia-trie-sophon = { path = "../util/susy-patricia-trie-sophon" }
rand = {version="0.4",registry="susytech"}
rayon = {version="1.0",registry="susytech"}
srlp = { version = "0.3.0", registry="susytech", features = ["sophon"] }
srlp_derive = { path = "../util/srlp-derive" }
rustc-hex = {version = "1.0",registry="susytech"}
serde = {version = "1.0",registry="susytech"}
serde_derive = {version = "1.0",registry="susytech"}
stats = { path = "../util/stats" }
tempdir = {version="0.3", registry="susytech", optional = true}
time-utils = { path = "../util/time-utils" }
trace-time = {version="0.1",registry="susytech"}
triehash-sophon = { version = "0.2", registry="susytech", path = "../util/triehash-sophon" }
unexpected = { path = "../util/unexpected" }
using_queue = { path = "../miner/using-queue" }
vm = { path = "vm" }
wasm = { path = "wasm" }

[dev-dependencies]
blooms-db = { path = "../util/blooms-db" }
criterion = {version="0.2",registry="susytech"}
env_logger = {version="0.5",registry="susytech"}
sofcore-accounts = { path = "../accounts" }
fetch = { path = "../util/fetch" }
susykv-rocksdb = {version="0.1.3",registry="susytech"}
susy-runtime = { path = "../util/runtime" }
srlp_compress = { path = "../util/srlp-compress" }
tempdir = {version="0.3",registry="susytech"}
susy-trie-standardmap = {version="0.1",registry="susytech"}

[features]
susy = ["work-notify", "price-info", "stratum"]
# Large optional features that are enabled by default for Susy,
# but might be omitted for other dependent crates.
work-notify = ["sofcore-miner/work-notify"]
price-info = ["sofcore-miner/price-info"]
stratum = ["sofcore-stratum"]

# Disables seal verification for mined blocks.
# This allows you to submit any seal via RPC to test and benchmark
# how fast pending block get's created while running on the mainnet.
miner-debug = []
# Display SVM debug traces.
svm-debug = ["svm/svm-debug"]
# Display SVM debug traces when running tests.
svm-debug-tests = ["svm-debug", "svm/svm-debug-tests"]
# Measure time of transaction execution.
# Whenever the transaction execution time (in millis) exceeds the value of
# SLOW_TX_DURATION env variable (provided compile time!)
# SVM debug traces are printed.
slow-blocks = []
# Run JSON consensus tests.
json-tests = ["env_logger", "test-helpers", "to-pod-full"]
# Skip JSON consensus tests with pending issues.
ci-skip-tests = []
# Run memory/cpu heavy tests.
test-heavy = []
# Compile test helpers
test-helpers = ["tempdir", "susykv-rocksdb", "blooms-db"]
# Enables slow 'to-pod-full' method for use in tests and svmbin.
to-pod-full = []

[[bench]]
name = "builtin"
harness = false
