[package]
description = "Susy Updater Service."
name = "susy-updater"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]

[dependencies]
common-types = { path = "../sofcore/types" }
sofabi = {version="6.0",registry="susytech"}
sofabi-contract = {version="6.0",registry="susytech"}
sofabi-derive = {version="6.0",registry="susytech"}
sofcore = { path = "../sofcore" }
sofcore-sync = { path = "../sofcore/sync" }
sophon-types = {version="0.4",registry="susytech"}
keccak-hash = {version="0.1",registry="susytech"}
lazy_static = {version="1.0",registry="susytech"}
log = {version="0.4",registry="susytech"}
susy-bytes = {version="0.1",registry="susytech"}
susy-hash-fetch = { path = "hash-fetch" }
susy-path = {version="0.1",registry="susytech"}
susy-version = { path = "../util/version" }
parking_lot = {version = "0.7",registry="susytech"}
rand = {version="0.4",registry="susytech"}
semver = {version = "0.9",registry="susytech"}
target_info = {version="0.1",registry="susytech"}

[dev-dependencies]
sofcore = { path = "../sofcore", features = ["test-helpers"] }
tempdir = {version="0.3",registry="susytech"}
matches = {version="0.1", registry="susytech"}

[features]
# hardcode version number 1.3.7 of susy to force an update
# in order to manually test that susy fall-over to the local version
# in case of invalid or deprecated command line arguments are entered
test-updater = []
