[package]
name = "sofstore"
version = "0.2.1"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]

[dependencies]
log = {version="0.4",registry="susytech"}
libc = {version="0.2",registry="susytech"}
rand = {version="0.4",registry="susytech"}
sofkey = { path = "../sofkey" }
serde = {version = "1.0",registry="susytech"}
serde_json = {version = "1.0",registry="susytech"}
serde_derive = {version = "1.0",registry="susytech"}
rustc-hex = {version = "1.0",registry="susytech"}
tiny-keccak = {version="1.4",registry="susytech"}
time = {version="0.1.34",registry="susytech"}
itertools = {version="0.5",registry="susytech"}
parking_lot = {version = "0.7",registry="susytech"}
susy-crypto = {version="0.3.0",registry="susytech"}
sophon-types = {version="0.4",registry="susytech"}
dir = { path = "../../util/dir" }
smallvec = {version="0.6",registry="susytech"}
susy-wordlist = {version="1.0",registry="susytech"}
tempdir = {version="0.3",registry="susytech"}
lazy_static = {version="1.2.0",registry="susytech"}

[dev-dependencies]
matches = {version="0.1", registry="susytech"}

[lib]
