[package]
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]
description = "Susy Rpc Client"
homepage = "http://superstring.io"
license = "GPL-3.0"
name = "susy-rpc-client"
version = "1.4.0"

[dependencies]
sophon-types = {version="0.4",registry="susytech"}
futures = {version = "0.1",registry="susytech"}
log = {version="0.4",registry="susytech"}
serde = {version = "1.0",registry="susytech"}
serde_json = {version = "1.0",registry="susytech"}
url = {version="1.2.0",registry="susytech"}
matches = {version="0.1", registry="susytech"}
parking_lot = {version = "0.7",registry="susytech"}
susy-jsonrpc-core = {version="10.0.1",registry="susytech"}
susy-jsonrpc-ws-server = {version="10.0.1",registry="susytech"}
susy-rpc = { path = "../../rpc" }
keccak-hash = {version="0.1",registry="susytech"}
